--- a/static/html/pc_body.html
+++ b/static/html/pc_body.html
@@ -11,7 +11,7 @@
         <div class="bio_card bio_profile">
             <span class="title">介绍</span>
             <img class="bio_head_img" src="" id="face">
-            <span class="bio_nick_name" id="nickname">灯侨呀</span>
+            <span class="bio_nick_name" id="nickname"></span>
             <div class="bio_item">
                 <div class="bio_item_part">
                     <div class="bio_item_title">等级</div>
