Fix PC scaler UI BUG For
An important UI update that will fix page errors caused by PC system default scaler.

--- a/static/html/mobile_body.html
+++ b/static/html/mobile_body.html
@@ -1,6 +1,6 @@
 <body>
     <input type="hidden" id="type" value="全部">
-    <input type="hidden" id="page" value="">
+    <input type="hidden" id="page" value="1">
     <div class="box">
         <div class="info_box">
             <img class="bio_head_img" src="" id="face">
@@ -31,7 +31,7 @@
             <button class="search_button"><img src="./static/img/search.svg"
                     style="float:left; margin-top: 4px;margin-left: 5px;">搜索</button>
         </div>
-        <ul class="tag_list" id="type_list">
+        <ul class="type_list" id="type_list">
         </ul>
         <ul class="song_list_item" id="songs_list">
         </ul>
