--- a/static/html/pc_body.html
+++ b/static/html/pc_body.html
@@ -1,50 +1,56 @@
 
 <body>
     <input type="hidden" id="type" value="全部">
-    <input type="hidden" id="page" value="">
-    <div class="song_list">
-        <span class="title song_list_title">歌单</span>
-        <ul class="song_list_item" id="songs_list">
-        </ul>
-    </div>
-    <div class="bio_box">
-        <div class="bio_card bio_profile">
-            <span class="title">介绍</span>
-            <img class="bio_head_img" src="" id="face">
-            <span class="bio_nick_name" id="nickname"></span>
-            <div class="bio_item">
-                <div class="bio_item_part">
-                    <div class="bio_item_title">等级</div>
-                    <div class="bio_item_value" id="level"></div>
-                </div>
-                <div class="bio_item_line"></div>
-                <div class="bio_item_part">
-                    <div class="bio_item_title">关注</div>
-                    <div class="bio_item_value" id="following"></div>
-                </div>
-                <div class="bio_item_line"></div>
-                <div class="bio_item_part">
-                    <div class="bio_item_title">粉丝</div>
-                    <div class="bio_item_value" id="follower"></div>
-                </div>
-            </div>
-            <div class="bio_sign" id="sign"></div>
-        </div>
-        <div class="bio_card search_box">
-            <div class="search_form">
-                <input class="search_input" type="text" name="query" placeholder="点'搜索'进行随机或输入文字搜索" id="search"
-                    mark="pc">
-                <button class="search_button">搜索</button>
-            </div>
-        </div>
-        <div class="bio_card notice" id="notice">
-        </div>
-        <div class="bio_card bio_profile tag_item">
-            <span class="title">标签</span>
-            <ul class="tag_list" id="type_list">
+    <input type="hidden" id="page" value="1">
+    <div class="view">
+        <div class="view_song card">
+            <div class="title">歌单</div>
+            <ul class="song_list" id="songs_list">
             </ul>
         </div>
+        <div class="view_bio">
+            <div class="bio card">
+                <div class="title">介绍</div>
+                <img class="face" src="" id="face">
+                <div class="nickname" id="nickname">Loading...</div>
+                <div class="user_data_box">
+                    <div class="user_data_part">
+                        <div class="user_data_title">等级</div>
+                        <div class="user_data_value" id="level">Loading...</div>
+                    </div>
+                    <div class="user_data_cutline"></div>
+                    <div class="user_data_part">
+                        <div class="user_data_title">关注</div>
+                        <div class="user_data_value" id="following">Loading...</div>
+                    </div>
+                    <div class="user_data_cutline"></div>
+                    <div class="user_data_part">
+                        <div class="user_data_title">粉丝</div>
+                        <div class="user_data_value" id="follower">Loading...</div>
+                    </div>
+                </div>
+                <div class="sign" id="sign"></div>
+            </div>
+            <div class="search_box card">
+                <div class="search_form">
+                    <input class="search_input" type="text" name="query" placeholder=" 点'搜索'进行随机或输入文字搜索" id="search"
+                        mark="pc">
+                    <button class="search_button">搜索</button>
+                </div>
+            </div>
+            <div class="notice_box card">
+                <div class="notice" id="notice">
+                    Loading...
+                </div>
+            </div>
+            <div class="type_box card">
+                <div class="title">标签</div>
+                <ul class="type_list" id="type_list">
+                </ul>
+            </div>
+        </div>
     </div>
+
     <footer>
         <nav>
             <ul>
